--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# database properties
+spring.datasource.url=jdbc:mysql://localhost:3306/movierating
+spring.datasource.username=root
+spring.datasource.password=sesame80
+spring.jpa.hibernate.ddl-auto=update
